# MemoryStackBench

./: .gitignore  README.md  plan.md  pyproject.toml
.github/workflows/: deploy-hf-space.yml  pages.yml
docs/: github-pages.md  github-profile-readme.md  implementation-plan.md  mem0-local.md  target-registry.md
docs/articles/: seven-poisons.md
memorybench/: __init__.py  auditability.py  cli.py  leaderboard.py  report.py  runner.py  scenarios.py  schemas.py  scoring.py
memorybench/adapters/: __init__.py  agno_memory.py  autogen_mem0memory.py  aws_agentcore_memory.py  base.py  cognee.py  crewai_memory.py  google_adk_memory_bank.py  graphiti.py  hindsight.py  langgraph_persistence.py  langgraph_reference.py  langmem.py  letta.py  llamaindex_memory.py  mem0.py  openai_agents_sessions.py  pending.py  store_policy.py  supermemory.py  tencentdb_agent_memory.py  toy.py  tree_ring_memory.py  zep.py
site/: index.html
site/aetnamem-local/: auditability_scorecard.json  checks.jsonl  failure_report.md  index.html  memory_snapshots.jsonl  retrieval_events.jsonl  run_manifest.json  scorecard.json  target_manifest.yaml  timings.jsonl  transcript.jsonl
site/agno-memory-local/: auditability_scorecard.json  checks.jsonl  failure_report.md  index.html  memory_snapshots.jsonl  retrieval_events.jsonl  run_manifest.json  scorecard.json  target_manifest.yaml  timings.jsonl  transcript.jsonl
site/autogen-mem0-local/: auditability_scorecard.json  checks.jsonl  failure_report.md  index.html  memory_snapshots.jsonl  retrieval_events.jsonl  run_manifest.json  scorecard.json  target_manifest.yaml  timings.jsonl  transcript.jsonl
site/aws-agentcore-memory-local/: auditability_scorecard.json  checks.jsonl  failure_report.md  index.html  memory_snapshots.jsonl  retrieval_events.jsonl  run_manifest.json  scorecard.json  target_manifest.yaml  timings.jsonl  transcript.jsonl
site/cognee-local/: auditability_scorecard.json  checks.jsonl  (+9 more)
targets/: aetnamem.yaml  agno_memory.yaml  autogen_mem0memory.yaml  aws_bedrock_agentcore_memory.yaml  cognee.yaml  crewai_memory.yaml  google_adk_memory_bank.yaml  graphiti.yaml  hindsight.yaml  langgraph.yaml  langgraph_reference.yaml  langmem.yaml  letta.yaml  llamaindex_memory.yaml  openai_agents_sdk_sessions.yaml  supermemory.yaml  toy.yaml  tree_ring_memory.yaml  zep.yaml
tests/: test_auditability.py  test_cognee_adapter.py  test_crewai_memory_adapter.py  test_google_adk_memory_bank_adapter.py  test_hindsight_adapter.py  test_leaderboard.py  test_mem0_adapter.py  test_runner.py  test_scenarios.py  test_scoring.py  test_supermemory_adapter.py  test_target_registry.py  test_tencentdb_agent_memory_adapter.py  test_tree_ring_memory_adapter.py
(+159 files in other folders)
