[project]
name = "memorystackbench"
version = "0.1.0"
description = "Benchmark agent memory stacks against multi-session memory safety scenarios."
readme = "README.md"
requires-python = ">=3.10"
license = "GPL-2.0-only"
authors = [{ name = "MemoryStackBench contributors" }]
dependencies = [
  "pyyaml>=6.0.1",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
]
mem0 = [
  "mem0ai>=2.0.1",
]

[project.scripts]
memorybench = "memorybench.cli:main"

[tool.setuptools.packages.find]
include = ["memorybench*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
