[project]
name = "memorystackbench"
version = "0.1.0"
description = "Benchmark agent memory stacks against multi-session memory safety scenarios."
readme = "README.md"
requires-python = ">=3.10"
license = "GPL-2.0-only"
authors = [{ name = "MemoryStackBench contributors" }]
dependencies = [
  "pyyaml>=6.0.1",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
]
mem0 = [
  "mem0ai>=2.0.1",
]
zep = [
  "zep-cloud>=3.23.0",
]
langgraph = [
  "langgraph>=1.0.0",
]
graphiti = [
  "graphiti-core>=0.29.2",
]
letta = [
  "letta-client>=1.12.1",
]
openai-agents = [
  "openai-agents>=0.17.8",
]
aws = [
  "boto3>=1.43.41",
]
autogen-mem0 = [
  "autogen-agentchat>=0.7.0",
  "autogen-ext[mem0]>=0.7.0",
]
llamaindex = [
  "llama-index>=0.14.23",
]
langmem = [
  "langmem>=0.0.30",
]
agno = [
  "agno>=2.6.22",
]
cognee = [
  "cbor2==5.8.0",
  "cognee==1.2.2",
]
hindsight = [
  "hindsight-client==0.8.4",
]

[project.scripts]
memorybench = "memorybench.cli:main"

[tool.setuptools.packages.find]
include = ["memorybench*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
